changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Tentative fix for bug #2018391: Zero-cap or capless containers, also stacking containers.
Split containers when reading/applying them (coherent with eg rings when applied).
Also ensure that a sack is split when putting things into it anyway.
 include/sproto.h: function now visible to others.
 server/apply.c c_object.c: split containers
 socket/item.c: don't crash if object isn't a player.
 test/unit/server/check_c_object.c: write some tests for put_object_in_sack().
Nicolas Weeger 2008-10-31

Fix for bug #2081472: short int encoding for food value in payment altars.
 include/living.h object.h: make food and last_eat sint32 so no overflow.
Nicolas Weeger 2008-10-31

Fix for bug #2140899: crash server by reading scroll on ground.
 types/scroll/scroll.c: keep scroll's inventory name in case inventory
  is removed.
Nicolas Weeger 2008-10-05

Add a function called tempnam_secure(), unlike the old tempnam_local() it should
be secure against race conditions. Replaced one of the two uses of tempnam_local
with tempnam_secure, the other one is a bit tricker. It may or may not work on
Windows, but it should be easy for someone with access to a Windows system to
add an #ifdef for that.
 include/libproto.h
 common/porting.c
 server/login.c
Arvid Norlander 2008-09-25

Fix for bug #1985944: problem with trigger_markers (object type 52).
 types/marker/marker.c
Arvid Norlander 2008-09-25

Fix for bug #2021042: level inscription indefinately with 1 scroll.
 server/skills.c: don't allow to write when blind.
Nicolas Weeger 2008-09-19
